<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="40dp"
    app:cardCornerRadius="10dp"
    tools:context=".ui.fragmentTrips.TripsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green">

        <TextView
            android:id="@+id/laberFlyClass"
            style="@style/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/class_fly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/enableChooseTypeTicketButton"
            app:layout_constraintTop_toBottomOf="@id/laberFlyClass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxEconomy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/economy"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkBoxBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxEconomy" />

            <TextView
                android:id="@+id/priceEconomy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/checkBoxEconomy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/checkBoxEconomy" />

            <TextView
                android:id="@+id/priceBusiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/checkBoxBusiness"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBoxEconomy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/enableChooseTypeTicketButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            style="@style/AppTheme.Button"
            app:layout_constraintEnd_toEndOf="@+id/constraintParent"
            app:layout_constraintStart_toStartOf="@+id/constraintParent"
            app:layout_constraintBottom_toBottomOf="@+id/constraintParent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>