<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.detailFragment.DetailFragment">

    <View
        android:id="@+id/viewHead"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/viewHead"
        app:layout_constraintEnd_toEndOf="@+id/viewHead"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/viewHead"
        app:layout_constraintTop_toTopOf="@+id/viewHead"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/cityFromHeadDetail"
            style="@style/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:text="Москва" />

        <ImageView
            style="@style/text_city"
            android:src="@drawable/ic_right"
            android:adjustViewBounds="true"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="10dp"
            android:text="@string/arrow" />

        <TextView
            android:id="@+id/cityToHeadDetail"
            style="@style/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:text="Нью-Йорк" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/flightOneCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHead">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHead">

            <TextView
                android:id="@+id/airportFromDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                style="@style/text_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Какой-то аэропорт" />

            <TextView
                android:id="@+id/airportToDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                style="@style/text_city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/airportFromDetails"
                tools:text="Какой-то аэропорт" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/arrowBetweenCards"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:text="Стрелка вниз, поставь потом картинку"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_down"
        app:layout_constraintEnd_toEndOf="@+id/flightOneCardView"
        app:layout_constraintStart_toStartOf="@+id/flightOneCardView"
        app:layout_constraintTop_toBottomOf="@+id/flightOneCardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/flightTwoCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrowBetweenCards">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHead">

            <TextView
                android:id="@+id/airportFromDetailsTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                style="@style/text_city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Какой-то аэропорт" />

            <TextView
                android:id="@+id/airportToDetailsTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                style="@style/text_city"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/airportFromDetailsTwo"
                tools:text="Какой-то аэропорт" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:id="@+id/textView6"
            style="@style/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="В одну сторону:"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/priceFlight"
            style="@style/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            tools:text="12312 Р" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flightTwoCardView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/classTypeTvLabel"
            android:text="@string/enabled_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/classType"
            android:layout_marginStart="10dp"
            style="@style/text_price"
            android:text="@string/business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>